Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriBooleanRetText.quorum
class Main
    action Main
        Yoda<Text, Text, boolean> yoda
        boolean y = yoda:useForce("green", "green")
        output "passed"
     end
end
