Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriObjectRetTextFail.quorum
class Main
    action Main
        Yoda<Text, Text, Object> yoda
        boolean y = yoda("green", "green", true)
     end
end
